fix spacing for small devices

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,10 @@ nav ul li a {
     color: grey;
 }
 
+.navbar-toggler {
+    background-image: var(--tertiary-color);
+}
+
 li {
     list-style: none;
 }
